...
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description"
                    android:inputType="textMultiLine"
                    android:text="@={viewmodel.formDescription}"
                    android:textSize="16sp" />
...
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_upload_photo_button" />

            <Button
                android:id="@+id/form_submit_button"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_submit_button"
                android:enabled="@{viewmodel.mediatorLiveData}"
...
