<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/modify"
        android:enabled="true"
        android:icon="@drawable/modify"
        android:title="@string/modify"
        app:showAsAction="ifRoom" />
</menu>